# nostr-connect-demo

./: README.md
noco-client/: Cargo.toml
noco-client-ui/: Cargo.toml
noco-client-ui/src/: main.rs
noco-client/src/: main.rs
noco-signer/: Cargo.toml
noco-signer/src/: main.rs
