[package]
name = "noco-client-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
iced = "0.8.0"
nostr-sdk = "0.19.0"
once_cell = "1.17.1"
serde_json = "1.0.93"
thiserror = "1.0"
tokio = "1.26.0"
